feat(example): more examples