@@ -2,21 +2,19 @@
 
 package com.example.weather;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import dev.tachyonmcp.server.McpServerHandle;
 import io.modelcontextprotocol.client.McpClient;
 import io.modelcontextprotocol.client.McpSyncClient;
 import io.modelcontextprotocol.client.transport.HttpClientStreamableHttpTransport;
 import io.modelcontextprotocol.spec.McpSchema;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.Map;
-
-import static org.assertj.core.api.Assertions.assertThat;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 class WeatherServerTest {
 
@@ -31,8 +29,8 @@ class WeatherServerTest {
         int port = handle.port();
 
         clientTransport = HttpClientStreamableHttpTransport
-            .builder("http://localhost:" + port)
-            .build();
+                .builder("http://localhost:" + port)
+                .build();
         client = McpClient.sync(clientTransport).build();
 
         initResult = client.initialize();
@@ -48,19 +46,18 @@ class WeatherServerTest {
     @Test
     void shouldServerInfo() {
         assertThat(initResult.serverInfo()).isEqualTo(
-            McpSchema.Implementation.builder("weather-server", "1.0")
-                .title("Weather Server")
-                .websiteUrl("http://localhost:8080/mcp")
-                .description("Weather MCP server")
-                .build()
-        );
+                McpSchema.Implementation.builder("weather-server", "1.0")
+                        .title("Weather Server")
+                        .websiteUrl("http://localhost:8080/mcp")
+                        .description("Weather MCP server")
+                        .build());
         assertThat(initResult.protocolVersion()).isEqualTo("2025-11-25");
         assertThat(initResult.instructions()).isEqualTo("Test instructions");
         assertThat(initResult.capabilities()).isEqualTo(McpSchema.ServerCapabilities.builder()
-            .tools(null)
-            .resources(null, null)
-            .build()
-        );
+                .tools(null)
+                .resources(null, null)
+                .prompts(null)
+                .build());
     }
 
     @Test
@@ -72,65 +69,138 @@ class WeatherServerTest {
         assertThat(tool.name()).isEqualTo("get-weather");
         assertThat(tool.title()).isEqualTo("Current Weather");
         assertThat(tool.description()).isEqualTo("Get current weather for a city");
-        assertThat(tool.inputSchema()).isEqualTo(Map.of(
-            "type", "object",
-            "required", List.of("city"),
-            "properties", Map.of(
-                "city", Map.of(
-                    "description", "City name (e.g., London, Tokyo, New York)",
-                    "type", "string"
-                ),
-                "units", Map.of(
-                    "description", "Temperature unit (default: celsius)",
-                    "enum", List.of("celsius", "fahrenheit"),
-                    "type", "string"
-                )
-            )
-        ));
+        assertThat(tool.inputSchema()).isEqualTo(java.util.Map.of(
+                "type", "object",
+                "required", List.of("city"),
+                "properties", java.util.Map.of(
+                        "city", java.util.Map.of(
+                                "description", "City name (e.g., London, Tokyo, New York)",
+                                "type", "string"),
+                        "units", java.util.Map.of(
+                                "description", "Temperature unit (default: celsius)",
+                                "enum", List.of("celsius", "fahrenheit"),
+                                "type", "string"))));
         assertThat(tool.outputSchema()).isNull();
         assertThat(tool.meta()).isNull();
-
     }
 
     @Test
     void shouldCallWeatherTool() {
         final var result = client.callTool(McpSchema.CallToolRequest.builder("get-weather")
-            .arguments(Map.of("city", "London",
-                "units", "celsius"
-            ))
-            .build());
+                .arguments(java.util.Map.of("city", "London", "units", "celsius"))
+                .build());
 
         assertThat(result).isNotNull();
         var content = result.content().getFirst();
         assertThat(content).isInstanceOf(McpSchema.TextContent.class);
         var textContent = ((McpSchema.TextContent) content);
         assertThat(textContent.text())
-            .startsWith("Weather in London:")
-            .contains("Temperature:")
-            .contains("°C")
-            .contains("Humidity:")
-            .contains("Wind:");
+                .startsWith("Weather in London:")
+                .contains("Temperature:")
+                .contains("°C")
+                .contains("Humidity:")
+                .contains("Wind:");
     }
 
     @Test
-    void shouldGetResource() {
-        final var listResult = client.listResources();
-        assertThat(listResult.resources()).hasSize(1);
-        McpSchema.Resource resource = listResult.resources().getFirst();
-        assertThat(resource.uri()).isEqualTo("weather://prediction/article");
-        assertThat(resource.name()).isEqualTo("prediction-article");
-        assertThat(resource.mimeType()).isEqualTo("text/markdown");
+    void shouldListResources() {
+        final var result = client.listResources();
 
-        final var resourceResult = client.readResource(resource);
-        List<McpSchema.ResourceContents> contents = resourceResult.contents();
-        assertThat(contents.getFirst()).isInstanceOf(McpSchema.TextResourceContents.class);
-        var textContents = ((McpSchema.TextResourceContents) contents.getFirst());
+        assertThat(result.resources()).hasSize(2);
+
+        var article = result.resources().get(0);
+        assertThat(article.uri()).isEqualTo("weather://prediction/article");
+        assertThat(article.name()).isEqualTo("prediction-article");
+        assertThat(article.mimeType()).isEqualTo("text/markdown");
+
+        var image = result.resources().get(1);
+        assertThat(image.uri()).isEqualTo("weather://current/image");
+        assertThat(image.name()).isEqualTo("weather-image");
+        assertThat(image.mimeType()).isEqualTo("image/png");
+    }
+
+    @Test
+    void shouldReadTextResource() {
+        final var listResult = client.listResources();
+        var article = listResult.resources().stream()
+                .filter(r -> r.uri().equals("weather://prediction/article"))
+                .findFirst().orElseThrow();
+
+        final var result = client.readResource(article);
+
+        var contents = result.contents().getFirst();
+        assertThat(contents).isInstanceOf(McpSchema.TextResourceContents.class);
+        var textContents = ((McpSchema.TextResourceContents) contents);
         assertThat(textContents.uri()).isEqualTo("weather://prediction/article");
         assertThat(textContents.mimeType()).isEqualTo("text/markdown");
         assertThat(textContents.text().trim())
-            .startsWith("# Weather Prediction")
-            .endsWith("Published by Tachyon Weather MCP — " + LocalDate.now().format(DateTimeFormatter.ISO_DATE));
+                .startsWith("# Weather Prediction")
+                .endsWith("Published by Tachyon Weather MCP — "
+                        + LocalDate.now().format(DateTimeFormatter.ISO_DATE));
     }
 
+    @Test
+    void shouldReadBlobResource() {
+        final var listResult = client.listResources();
+        var image = listResult.resources().stream()
+                .filter(r -> r.uri().equals("weather://current/image"))
+                .findFirst().orElseThrow();
 
+        final var result = client.readResource(image);
+
+        var contents = result.contents().getFirst();
+        assertThat(contents).isInstanceOf(McpSchema.BlobResourceContents.class);
+        var blobContents = ((McpSchema.BlobResourceContents) contents);
+        assertThat(blobContents.uri()).isEqualTo("weather://current/image");
+        assertThat(blobContents.mimeType()).isEqualTo("image/png");
+        assertThat(blobContents.blob()).isNotBlank();
+    }
+
+    @Test
+    void shouldListResourceTemplates() {
+        final var result = client.listResourceTemplates();
+
+        assertThat(result.resourceTemplates()).hasSize(1);
+        var template = result.resourceTemplates().getFirst();
+        assertThat(template.uriTemplate()).isEqualTo("weather://forecast/{city}");
+        assertThat(template.name()).isEqualTo("forecast");
+        assertThat(template.mimeType()).isEqualTo("application/json");
+    }
+
+    @Test
+    void shouldReadForecastFromTemplate() {
+        final var result = client.readResource(
+                McpSchema.ReadResourceRequest.builder("weather://forecast/London").build());
+
+        var contents = result.contents().getFirst();
+        assertThat(contents).isInstanceOf(McpSchema.TextResourceContents.class);
+        var textContents = ((McpSchema.TextResourceContents) contents);
+        assertThat(textContents.uri()).isEqualTo("weather://forecast/London");
+        assertThat(textContents.mimeType()).isEqualTo("application/json");
+        assertThat(textContents.text()).contains("London");
+    }
+
+    @Test
+    void shouldListPrompts() {
+        final var result = client.listPrompts();
+
+        assertThat(result.prompts()).hasSize(1);
+        var prompt = result.prompts().getFirst();
+        assertThat(prompt.name()).isEqualTo("rewrite-forecast");
+        assertThat(prompt.description()).isEqualTo("Rewrites a weather forecast in a given style");
+    }
+
+    @Test
+    void shouldGetPrompt() {
+        final var result = client.getPrompt(
+                McpSchema.GetPromptRequest.builder("rewrite-forecast").build());
+
+        assertThat(result).isNotNull();
+        assertThat(result.messages()).hasSize(1);
+        var message = result.messages().getFirst();
+        assertThat(message.role()).isEqualTo(McpSchema.Role.USER);
+        assertThat(message.content()).isInstanceOf(McpSchema.TextContent.class);
+        var textContent = ((McpSchema.TextContent) message.content());
+        assertThat(textContent.text()).isEqualTo("Rewrite this forecast in a pirate style.");
+    }
 }
